--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cloud_firestore: ^0.13.4+2
   eva_icons_flutter: ^2.0.0
   firebase_auth: ^0.15.5+3
+  video_player: ^0.10.8+1
 
 dev_dependencies:
   flutter_test:
