--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   screen: ^0.0.5
   firebase_messaging: ^6.0.13
   awesome_dialog: ^0.1.3
+  pdf: ^1.6.1
+  native_pdf_renderer: ^1.8.1
+  firebase_storage: ^3.1.5
+  file_picker: ^1.6.3+1
+  camera: ^0.5.7+4
   splashscreen:
   toast:
   mailer:
