--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   native_pdf_renderer: ^1.8.1
   firebase_storage: ^3.1.5
   file_picker: ^1.6.3+1
-  camera: ^0.5.7+4
+  gallery_saver: ^2.0.1
+  image_picker: ^0.6.5
   splashscreen:
   toast:
   mailer:
