--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   file_picker: ^1.6.3+1
   gallery_saver: ^2.0.1
   image_picker: ^0.6.5
+  pointycastle: ^1.0.2
+  steel_crypt: ^1.7.1+1
   splashscreen:
   toast:
   mailer:
