--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_messaging: ^6.0.13
   awesome_dialog: ^0.1.3
   pdf: ^1.6.1
+  http:
   native_pdf_renderer: ^1.8.1
   firebase_storage: ^3.1.5
   file_picker: ^1.6.3+1
