--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   awesome_dialog: ^0.1.3
   pdf: ^1.6.1
   http:
+  auto_size_text: ^2.1.0
   native_pdf_renderer: ^1.8.1
   firebase_storage: ^3.1.5
   file_picker: ^1.6.3+1
