--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pdf: ^1.6.1
   http:
   auto_size_text: ^2.1.0
+  expandable: ^4.1.3
   native_pdf_renderer: ^1.8.1
   firebase_storage: ^3.1.5
   file_picker: ^1.6.3+1
