--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^0.6.5
   pointycastle: ^1.0.2
   steel_crypt: ^1.7.1+1
+  camera:
   splashscreen:
   toast:
   mailer:
