--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,12 @@ dependencies:
   file_picker: ^1.6.3+1
   gallery_saver: ^2.0.1
   image_picker: ^0.6.5
-  pointycastle: ^1.0.2
-  steel_crypt: ^1.7.1+1
   camera:
   permission_handler: ^5.0.0+hotfix.4
   splashscreen:
   toast:
+  app_settings: ^4.0.0
+  share: ^0.6.4
   mailer:
   loadmore: ^1.0.4
 
