--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,16 @@ dependencies:
   firebase_auth: ^0.15.5+3
   video_player: ^0.10.9+1
   url_launcher: ^5.4.2
-  flutter_spinkit:
-  provider:
-  connectivity:
-  country_pickers:
-  string_validator:
-  pin_code_fields:
-  searchable_dropdown:
-  search_widget:
+  flutter_spinkit: ^4.1.2+1
+  connectivity: ^0.4.8+2
+  country_pickers: ^1.2.1
+  pin_code_fields: ^2.5.1
+  search_widget: ^1.0.2
   screen: ^0.0.5
   firebase_messaging: ^6.0.13
   awesome_dialog: ^0.1.3
   pdf: ^1.6.1
-  http:
+  http: ^0.12.1
   auto_size_text: ^2.1.0
   expandable: ^4.1.3
   native_pdf_renderer: ^1.8.1
@@ -49,16 +46,15 @@ dependencies:
   file_picker: ^1.6.3+1
   gallery_saver: ^2.0.1
   image_picker: ^0.6.5
-  camera:
+  camera: ^0.5.7+4
   permission_handler: ^5.0.0+hotfix.4
-  splashscreen:
-  toast:
+  splashscreen: ^1.2.0
+  toast: ^0.1.5
   app_settings: ^4.0.0
   share: ^0.6.4
-  mailer:
+  mailer: ^3.0.4
   loadmore: ^1.0.4
   flutter_html: ^0.11.1
-  mailer2: ^1.2.5
 
 
 dev_dependencies:
