--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   pin_code_fields: ^2.5.1
   search_widget: ^1.0.2
   screen: ^0.0.5
-  firebase_messaging: ^6.0.13
+  firebase_messaging: ^6.0.13      #need to configure for ios properly
   awesome_dialog: ^0.1.3
   pdf: ^1.6.1
   http: ^0.12.1
