--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_html: ^0.11.1
   double_back_to_close_app: ^1.2.0
   datetime_picker_formfield: ^1.0.0
+  dropdownfield: ^1.0.3
 
 
 dev_dependencies:
