--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   firebase_messaging: ^6.0.13      #need to configure for ios properly
   awesome_dialog: ^0.1.3
   pdf: ^1.6.1
+  pdf_viewer_plugin: ^1.0.0+2
   http: ^0.12.1
   auto_size_text: ^2.1.0
   expandable: ^4.1.3
-  native_pdf_renderer: ^1.8.1
   firebase_storage: ^3.1.5
   file_picker: ^1.6.3+1
   gallery_saver: ^2.0.1
