--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   firebase_messaging: ^6.0.13      #need to configure for ios properly
   awesome_dialog: ^0.1.3
   pdf: ^1.6.1
-  pdf_viewer_plugin: ^1.0.0+2
   http: ^0.12.1
   auto_size_text: ^2.1.0
   expandable: ^4.1.3
@@ -60,6 +59,8 @@ dependencies:
   dropdownfield: ^1.0.3
   awsome_video_player: ^1.0.8+1
   youtube_player_flutter: ^6.1.1
+  pdf_viewer_plugin: ^1.0.0+2
+  esys_flutter_share: ^1.0.2
 
 
 dev_dependencies:
