--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,24 +26,22 @@ dependencies:
   shared_preferences: ^0.5.6+3
   cloud_firestore: ^0.13.4+2
   eva_icons_flutter: ^2.0.0
-  firebase_auth: ^0.15.5+3
+  firebase_auth: ^0.16.0
   video_player: ^0.10.9+1
   url_launcher: ^5.4.2
   flutter_spinkit: ^4.1.2+1
   connectivity: ^0.4.8+2
   country_pickers: ^1.2.1
-  pin_code_fields: ^2.5.1
+  pin_code_fields: ^3.0.0
   search_widget: ^1.0.2
   screen: ^0.0.5
   firebase_messaging: ^6.0.13      #need to configure for ios properly
   awesome_dialog: ^0.1.3
-  pdf: ^1.6.1
   http: ^0.12.1
   auto_size_text: ^2.1.0
   expandable: ^4.1.3
   firebase_storage: ^3.1.5
   file_picker: ^1.6.3+1
-  gallery_saver: ^2.0.1
   image_picker: ^0.6.5
   camera: ^0.5.7+4
   permission_handler: ^5.0.0+hotfix.4
@@ -51,17 +49,13 @@ dependencies:
   toast: ^0.1.5
   app_settings: ^4.0.0
   share: ^0.6.4
-  mailer: ^3.0.4
-  loadmore: ^1.0.4
   flutter_html: ^0.11.1
   double_back_to_close_app: ^1.2.0
   datetime_picker_formfield: ^1.0.0
-  dropdownfield: ^1.0.3
   awsome_video_player: ^1.0.8+1
-  youtube_player_flutter: ^6.1.1
-  pdf_viewer_plugin: ^1.0.0+2
   esys_flutter_share: ^1.0.2
   dio: ^3.0.9
+  flutter_plugin_pdf_viewer: ^1.0.7
 
 
 dev_dependencies:
