--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   esys_flutter_share: ^1.0.2
   dio: ^3.0.9
   flutter_plugin_pdf_viewer: ^1.0.7
+  flutter_timer: ^0.0.6
+  flutter_countdown_timer: ^1.1.0
 
 
 dev_dependencies:
