--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_countdown_timer: ^1.1.0
   youtube_player_flutter: ^6.1.1
   cached_network_image:
+  provider:
 
 dev_dependencies:
   flutter_test:
