--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   youtube_player_flutter: ^6.1.1
   cached_network_image:
   provider:
+  search_choices: ^1.0.15
+  searchable_dropdown: ^1.1.3
 
 dev_dependencies:
   flutter_test:
