--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   cached_network_image:
   provider:
   search_choices: ^1.0.15
+  async: ^2.4.1
   searchable_dropdown: ^1.1.3
 
 dev_dependencies:
