--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   search_choices: ^1.0.15
   async: ^2.4.1
   searchable_dropdown: ^1.1.3
+  wakelock: ^0.1.4+1
 
 dev_dependencies:
   flutter_test:
