--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   async: ^2.4.1
   searchable_dropdown: ^1.1.3
   wakelock: ^0.1.4+1
+  flushbar: ^1.10.4
 
 dev_dependencies:
   flutter_test:
