--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   flutter_countdown_timer: ^1.1.0
   youtube_player_flutter: ^6.1.1
   cached_network_image:
-  provider:
+  provider: ^4.0.1
   search_choices: ^1.0.15
   async: ^2.4.1
   searchable_dropdown: ^1.1.3
