--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   searchable_dropdown: ^1.1.3
   wakelock: ^0.1.4+1
   flushbar: ^1.10.4
+  flutter_linkify: ^3.1.3
 
 dev_dependencies:
   flutter_test:
