--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,6 @@ dependencies:
   flutter_plugin_pdf_viewer: ^1.0.7
   flutter_timer: ^0.0.6
   flutter_countdown_timer: ^1.1.0
-  youtube_player_flutter: ^6.1.1
   cached_network_image:
   provider: ^4.0.1
   search_choices: ^1.0.15
@@ -68,6 +67,7 @@ dependencies:
   flushbar: ^1.10.4
   emoji_picker: ^0.1.0
   flutter_linkify: ^3.1.3
+  youtube_player_flutter:
 
 dev_dependencies:
   flutter_test:
