--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dependencies:
   flushbar: ^1.10.4
   emoji_picker: ^0.1.0
   flutter_linkify: ^3.1.3
-  youtube_player_flutter:
+  youtube_player_flutter: ^6.1.1
 
 dev_dependencies:
   flutter_test:
