--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   emoji_picker: ^0.1.0
   flutter_linkify: ^3.1.3
   youtube_player_flutter: ^6.1.1
+  open_file: ^3.0.1
 
 dev_dependencies:
   flutter_test:
